2009-03-03  Bruno coudoin  <bruno.coudoin@free.fr>

	- Was not compiling when USE_GNET was not active.

	* src/gcompris/gc_net.c: (gc_net_destroy),
	(gc_net_get_url_from_file), (gc_net_dir_read_name),
	(gc_cache_init), (gc_cache_get_relative), (gc_cache_add),
	(gc_cache_import_pixmap), (gc_cache_remove), (_table_foreach),
	(gc_cache_save), (gc_cache_destroy):

2009-02-28  Bruno coudoin  <bruno.coudoin@free.fr>

	- Patch from Johan Cwiklinski <mailings x-tnd.be>
	  to support python 2.6

	* src/boards/python/admin/class_edit.py:
	* src/boards/python/admin/group_edit.py:
	* src/boards/python/admin/profile_edit.py:

2009-02-25  Bruno coudoin  <bruno.coudoin@free.fr>

	- Now properly points use images in ~My GCompris/Images
	  In the animation activity, the image selector will display
	  all images from this directory.
	  (FIXME: There is a readme file in it that we failed to load as
	          an image).

	* boards/dataset/user_pictures.xml:

2009-02-25  Bruno coudoin  <bruno.coudoin@free.fr>

	- Fixed strings:
	* boards/babyshapes.xml.in:
	* boards/babyshapes/board8_1.xml.in:
	* boards/babyshapes/board8_4.xml.in:
	* src/boards/reading.c: (reading_create_item):
	* src/gcompris/board_config_wordlist.c: (gc_board_config_wordlist):

	- Fixed bug, the configuration was crashing uppon startup from the admin mode
	* src/boards/missingletter.c: (_init), (start_board),
	(config_start):
	* src/boards/missingletter_config.c:
	* src/boards/python/admin/board_list.py:

2009-02-20  Bruno coudoin  <bruno.coudoin@free.fr>

	- Added missing Paul before Gauguin

	* boards/babyshapes/board8_0.xml.in:

2009-02-20  Bruno coudoin  <bruno.coudoin@free.fr>

	- Should fix the empty date field in the log on Windows

	* src/gcompris/log.c: (gc_log_end):

2009-02-19  Bruno coudoin  <bruno.coudoin@free.fr>

	- Minor updates regarding translations

	* po/POTFILES.in:
	* po/fr.po:
	* src/boards/missingletter_config.c: (configure_colummns):
	* src/boards/reading.c: (reading_create_item):